--- a/web/index.html
+++ b/web/index.html
@@ -11,9 +11,20 @@
   >
 </head>
 
+<header class="d-flex flex-row bd-highlight">
+    <a href="#">Home</a>
+    <a href="#">About us</a>
+    <a href="#">Sign Up</a>
+    <a href="#">Sign In</a>
+
+
+</header>
+
 <body>
 
+
   <h1 class="text-center mt-5">Bootstrap fonctionne</h1>
+
 
   <!-- Bootstrap JS (obligatoire pour navbar, modals, etc.) -->
   <script
