--- a/web/jsanim/page2.html
+++ b/web/jsanim/page2.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anim#2</title>
+    <style>
+        body {
+            background-color: black;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            color: white;
+            font-family: Arial, sans-serif;
+            font-size: 24px;
+        }
+    </style>
 </head>
 <body>
-    
-    
+    <h1>Welcome to Page 2!</h1>
 </body>
 </html>
